--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -82,18 +82,34 @@
                 Also i probably missed some names between 26/4 and 6/5/2024 oops<br><br>
                 (name changer) leaderboard:</p>
                 <ul>
-                    <li><b>kulupu ko:</b> 141 changes</li>
-                    <li><b>the motan:</b> 82 changes</li>
+                    <li><b>kulupu ko:</b> 145 changes</li>
+                    <li><b>the motan:</b> 89 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
-                    <li><b>tabby:</b> 41 changes</li>
-                    <li><b>jan Seli:</b> 26 changes</li>
+                    <li><b>tabby:</b> 43 changes</li>
+                    <li><b>jan Seli:</b> 27 changes</li>
                     <li><b>kala Asi:</b> 19 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
+                    <li><b>waso Atu:</b> 1 change</li>
                 </ul>
                 <p style="margin-bottom: 5px">mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name_list_2024">
+            <li>19/7:<b> ma shit pi shitjo anshit </b><span class="name">the motan</span></li><br>
+            <li>19/7:<b> ma ante pi ijo ante </b><span class="name">jan Seli</span></li><br>
+            <li>19/7:<b> ma shit pi shit </b><span class="name">tabby</span></li><br>
+            <li>18/7:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li><br>
+            <li>18/7:<b> i aint afraid of no sleep, i aint afraid of no bed </b><span class="name">the motan</span></li><br>
+            <li>18/7:<b> it's thundering and i don't like it :( </b><span class="name">kulupu ko</span></li><br>
+            <li>17/7:<b> wqt cþlqt </b><span class="name">the motan</span></li><br>
+            <li>17/7:<b> wqt c2lqt </b><span class="name">waso Atu</span></li><br>
+            <li>17/7:<b> here's my impression of a pirate: aargh me matey, walk the plank </b><span class="name">the motan</span></li><br>
+            <li>17/7:<b> here's my impression of a pirate: aargh me matey, walk the plank. here's my impression of a pilot: i </b><span class="name">the motan</span></li><br>
+            <li>17/7:<b> aspen's userland </b><span class="name">kulupu ko</span></li><br>
+            <li>17/7:<b> VLC Media Prayer </b><span class="name">the motan</span></li><br>
+            <li>17/7:<b> vlc media prayer </b><span class="name">tabby</span></li><br>
+            <li>17/7:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li><br>
+            <li>8/7:<b> ma an*bird flies past*Did anyone see that. </b><span class="name">the motan</span></li><br>
             <li>6/7:<b> ma motan pi suno motan </b><span class="name">the motan</span></li><br>
             <li>1/7:<b> the other place, for different conversations </b><span class="name">jan Seli</span></li><br>
             <li>30/6:<b> land of the ante, home of the ante </b><span class="name">tabby</span></li><br>
