--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -85,16 +85,18 @@
                     <li><b>kulupu ko:</b> 145 changes</li>
                     <li><b>the motan:</b> 89 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
-                    <li><b>tabby:</b> 43 changes</li>
+                    <li><b>tabby:</b> 44 changes</li>
                     <li><b>jan Seli:</b> 27 changes</li>
                     <li><b>kala Asi:</b> 19 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
+                    <li><b>waso Atu:</b> 2 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
-                    <li><b>waso Atu:</b> 1 change</li>
                 </ul>
                 <p style="margin-bottom: 5px">mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name_list_2024">
+            <li>20/7:<b> 不同的土地有不同的东西 </b><span class="name">waso Atu</span></li><br>
+            <li>20/7:<b> ma ante pi toki pona </b><span class="name">tabby</span></li><br>
             <li>19/7:<b> ma shit pi shitjo anshit </b><span class="name">the motan</span></li><br>
             <li>19/7:<b> ma ante pi ijo ante </b><span class="name">jan Seli</span></li><br>
             <li>19/7:<b> ma shit pi shit </b><span class="name">tabby</span></li><br>
