meh antay pie eejow antay

--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -9,7 +9,7 @@
             font-feature-settings: 'ss02';
             src: url(../../../../assets/Aspekta_Variable_Regular.ttf);}
         @font-face {
-            font-family: 'Aspekta';
+            font-family: 'Aspekta', sans-serif;
             font-weight: bold; font-feature-settings: 'ss02';
             font-variation-settings: 'wght' 700;
             src: url(../../../../assets/Aspekta_Variable_Regular.ttf);}
@@ -82,7 +82,7 @@
                 Also i probably missed some names between 26/4 and 6/5/2024 oops<br><br>
                 (name changer) leaderboard:</p>
                 <ul>
-                    <li><b>kulupu ko:</b> 1461 changes</li>
+                    <li><b>kulupu ko:</b> 149 changes</li>
                     <li><b>the motan:</b> 89 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>tabby:</b> 44 changes</li>
@@ -95,6 +95,7 @@
                 <p style="margin-bottom: 5px">mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name_list_2024">
+            <li>22/7:<b> mæ ænteɪ pai ijoʊ ænteɪ </b><span class="name">kulupu ko</span></li><br>
             <li>21/7:<b> мд дите рі ю дите </b><span class="name">waso Atu</span></li><br>
             <li>21/7:<b> ma ante </b><span class="name">kulupu ko</span></li><br>
             <li>20/7:<b> 不同的土地有不同的东西 </b><span class="name">waso Atu</span></li><br>
