arrgh (changed aspekta to giphurs)

--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -4,19 +4,18 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>→ server names</title><style>
         @font-face {
-            font-family: 'Aspekta';
+            font-family: 'Giphurs';
             font-weight: normal;
-            font-feature-settings: 'ss02';
-            src: url(../../../../assets/Aspekta_Variable_Regular.ttf);}
+            src: url(../../../../assets/Giphurs[wght].ttf);}
         @font-face {
-            font-family: 'Aspekta', sans-serif;
-            font-weight: bold; font-feature-settings: 'ss02';
+            font-family: 'Giphurs';
+            font-weight: bold;
             font-variation-settings: 'wght' 700;
-            src: url(../../../../assets/Aspekta_Variable_Regular.ttf);}
+            src: url(../../../../assets/Giphurs[wght].ttf);}
         body{background-color: #080808;
         color: #f0f0f0; margin: -0;
         flex-direction: row-reverse; letter-spacing: 0.025rem;
-        font-family: 'Aspekta', sans-serif;}
+        font-family: 'Giphurs', sans-serif;}
 
         *{transition: all .5s cubic-bezier(0,1,0,1)}
 
