--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -10,11 +10,11 @@
         @font-face {
             font-family: 'Giphurs';
             font-weight: bold;
-            font-variation-settings: 'wght' 700;
+            font-variation-settings: 'wght' 600;
             src: url(../../../../assets/Giphurs[wght].ttf);}
         body{background-color: #080808;
         color: #f0f0f0; margin: -0;
-        flex-direction: row-reverse; letter-spacing: 0.025rem;
+        flex-direction: row-reverse;
         font-family: 'Giphurs', sans-serif;}
 
         *{transition: all .5s cubic-bezier(0,1,0,1)}
