--- a/doodles/index.html
+++ b/doodles/index.html
@@ -15,10 +15,13 @@
         font-weight:bold; font-style: italic;}
         #notebooks a:hover{border-radius: 24px; border-color: #0000;}
 
+
+        #_12:hover{
+            background-color: #286f6b;
+            color: #eae8e6;}
         #_14:hover{
             background-color: #101010;
-            color: #d0d0d0;
-        }
+            color: #d0d0d0;}
         #_15:hover, #_16:hover {
             background-color: #ccb184;
             color: #130e02;}
@@ -36,7 +39,7 @@
             The white noise is comforting and soothing.
         </p>
         <nav id="notebooks">
-            <a href="14" id="_14">14 {70}</a><a href="15" id="_15">15 {33}</a><a href="16" id="_16">16 {32}</a><a href="ibispaint" id="ibispaint">ibisPaint {8}</a>
+            <a href="12" id="_12">12 {45}</a><a href="14" id="_14">14 {70}</a><a href="15" id="_15">15 {33}</a><a href="16" id="_16">16 {32}</a><a href="ibispaint" id="ibispaint">ibisPaint {8}</a>
         </nav>
         <img src="floating.png" alt="floating door, seat and bookshelf" style="margin: 5rem 0 0 auto ; max-width: 100%; width: auto">
         </main></body>
