--- a/doodles/12/index.html
+++ b/doodles/12/index.html
@@ -6,7 +6,7 @@
         <title>doodles{12}</title><style>
         body{--back: #afa29a;
             --text: #211e1f;
-            --color: #48827b;}
+            --color: #2a625b;}
         </style></head>
     <body><header>
         <h1>12</h1>
