added glass images!

--- a/doodles/12/index.html
+++ b/doodles/12/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <title>doodles{12}</title><style>
-        body{--back: #afa29a;
+        body{--back: #d9b776;
             --text: #211e1f;
             --color: #2a625b;}
         </style></head>
@@ -37,7 +37,7 @@
             <div class='image'><img src="21.jpg"><p>safety signs</p></div>
             <div class='image'><img src="22.jpg"><p>geometric sitelen pona and alphabet</p></div>
             <div class='image'><img src="23.jpg"><p>on the door</p></div>
-            <div class='image'><img src="24.jpg"><p>i'm wasting this fucking notebook. i could have drawn anthing, something fun, but i didn't.</p></div>
+            <div class='image'><img src="24.jpg"><p>i'm wasting this fucking notebook. i could have drawn anything, something fun, but i didn't.</p></div>
             <div class='image'><img src="25.jpg"><p>graphite person</p></div>
             <div class='image'><img src="26.jpg"><p>Caretaker esque drawing of an empty head</p></div>
             <div class='image'><img src="27.jpg"><p>reflection: i don't think i'm doing good</p></div>
