--- a/blender/index.html
+++ b/blender/index.html
@@ -37,7 +37,7 @@
             You can see how many images each page has next to the link, so if your internet 
             isn't too good, maybe these won't be the fastest loading times...</p></details>
         <nav id="expos">
-            <a href="icossymetry">icossymetry (40)</a>
+            <a href="icossymetry">icossymetry (40)</a> <a href="glass">glass (50)</a>
         </nav>
         <img src="shadow.png" alt="a handdrawn sphere casting a shadow" style="margin: 5rem 0 0 ; max-width: 100%; width: auto">
     </main>
