--- a/blender/index.html
+++ b/blender/index.html
@@ -10,6 +10,9 @@
             body{--backtrans: 60%}
 
             details:hover, details[open]{--back: var(--text)}
+            details:hover::selection, details[open]::selection{
+                background-color: var(--back);
+            }
 
             #expos a{width: fit-content; margin: 0;
                 font-weight: bold;
