--- a/blender/index.html
+++ b/blender/index.html
@@ -14,10 +14,10 @@
                 background-color: var(--back);
             }
 
-            #expos a{width: fit-content; margin: 0;
+            #expos a{width: fit-content;
                 font-weight: bold;
                 font-size: 1.5rem; padding: 8px 16px; 
-                display: inline; text-decoration: none}
+                display: inline-block; text-decoration: none}
             #expos a:hover {
                 background-color: var(--color);
                 color: var(--back);}
@@ -40,7 +40,7 @@
             You can see how many images each page has next to the link, so if your internet 
             isn't too good, maybe these won't be the fastest loading times...</p></details>
         <nav id="expos">
-            <a href="icossymetry">icossymetry (40)</a> <a href="glass">glass (50)</a>
+            <a href="icossymetry">icossymetry&nbsp;(40)</a> <a href="glass">glass&nbsp;(50)</a>
         </nav>
         <img src="shadow.png" alt="a handdrawn sphere casting a shadow" style="margin: 5rem 0 0 ; max-width: 100%; width: auto">
     </main>
