changed sitelog font to Iosevka!

--- a/sitelog.html
+++ b/sitelog.html
@@ -5,11 +5,21 @@
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="assets/sitelog.png">
         <title>sitelog</title><style>
+            @font-face {
+                font-family: 'Iosevka Exteded';
+                font-weight:normal;
+                src: url(assets/Iosevka-Extended.ttf);
+            }
+            @font-face {
+                font-family: 'Iosevka Extended';
+                font-weight: bold;
+                src: url(assets/Iosevka-ExtendedExtraBold.ttf);
+            }
             body{--back: black;
                 --text: orange;
                 --color: sienna;
-                --backtrans: 30%;
-                font-family: 'Inconsolata', monospace}
+                --backtrans: 30%; letter-spacing: -.045rem;
+                font-family: 'Iosevka Extended', monospace}
             
             h1, h3, b{font-weight: 900}
 
