removed the note from the sitelog

--- a/sitelog.html
+++ b/sitelog.html
@@ -6,8 +6,8 @@
         <link rel="icon" type="image/x-icon" href="assets/sitelog.png">
         <title>sitelog</title><style>
             @font-face {
-                font-family: 'Iosevka Exteded';
-                font-weight:normal;
+                font-family: 'Iosevka Extended';
+                font-weight: normal;
                 src: url(assets/Iosevka-Extended.ttf);
             }
             @font-face {
@@ -18,7 +18,7 @@
             body{--back: black;
                 --text: orange;
                 --color: sienna;
-                --backtrans: 30%; letter-spacing: -.045rem;
+                --backtrans: 30%; letter-spacing: -.03rem;
                 font-family: 'Iosevka Extended', monospace}
             
             h1, h3, b{font-weight: 900}
@@ -35,9 +35,7 @@
     <body><header><h1>site&shy;log</h1>
         <nav><a href="#">↑ top</a> <a href="corridor">↩ back</a></nav></header>
     <main>
-        <p style="margin-bottom: 24px">As you approach the computer, you notice another note, saying that <b>the links shown
-            will most likely lead to nowhere, since this space is being rebuilt.</b><br>
-            Knowing that, you boot up the computer and hear a buzz from the CRT.<br>
+        <p style="margin-bottom: 24px">You boot up the computer and hear a buzz from the CRT.<br>
             After a few seconds, a log appears, in delightful amber, of changes done to this space 
             by the webmaster.
         </p>
