--- a/sitelog.html
+++ b/sitelog.html
@@ -24,7 +24,7 @@
             h1, h3, b{font-weight: 900}
 
             h3{margin: 0; color: sienna}
-            h3::before{content: "> "} 
+            h3::before{content: "> "; color: var(--text)} 
             .entry{margin-bottom: 16px}
             .entry p{margin: 0 0 0 8px;
                 border-left: solid 1px sienna;
