changed sitelog style

--- a/corridor.html
+++ b/corridor.html
@@ -69,7 +69,7 @@
             <h2 style="text-align: left;"><a id='doodles' href="doodles">← doodles</a></h2>
             <h2 style="text-align: left;"><a id='buttons' href="buttons">← buttons</a></h2>
             <h2 style="text-align: right;"><a id='basement' href="basement">basement →</a></h2>
-            <h2 style="text-align: center;"><a id='sitelog' href="sitelog">sitelog →</a></h2>
+            <h2 style="text-align: center;"><a id='sitelog' href="sitelog">↓ sitelog</a></h2>
         </nav>
     </main>
     </body>
