--- a/blender/icossymetry/index.html
+++ b/blender/icossymetry/index.html
@@ -31,39 +31,39 @@
         <br>
 
         <div class="image"><img src="icosymmetry1.jpg">
-        <p>1.</p></div>
+        <p><b>1. </b></p></div>
         <br>
 
         <div class="image"><img src="icosymmetry2.jpg">
-        <p>2. just the projection without the icossymetry thing</p></div>
+        <p><b>2.</b> just the projection without the icossymetry thing</p></div>
         <br>
 
         <div class="image"><img src="icosymmetry3.jpg">
-        <p>3. the shadow when the ball is rotated in an arbitrary direction;
+        <p><b>3.</b> the shadow when the ball is rotated in an arbitrary direction;
             also, all the curves are circles! That's because of the stereographic projection.</p></div>
             <br>
         
         <div class="image"><img src="icosymmetry4.jpg">
-        <p>4. here, i've put a metal sphere right under the icossymetry ball...<br>
+        <p><b>4.</b> here, i've put a metal sphere right under the icossymetry ball...<br>
         i'm calling it the symmetry group. And i noticed the shadow reflected in the metal ball
         as neat curvy lines, so i wanted to get a closer look:</p></div>
         <br>
 
         <div class="image"><img src="icosymmetry5.jpg">
-        <p>5. oh yeah. That looks nice. And you can see the metal ball's shadow on it's own reflection!</p></div>
+        <p><b>5.</b> oh yeah. That looks nice. And you can see the metal ball's shadow on it's own reflection!</p></div>
         <br>
 
         <div class="image"><img src="icosymmetry6.jpg">
-        <p>6. a closeup shot showing some of the shadow in the back.<br>I wanted to use this as a
+        <p><b>6.</b> a closeup shot showing some of the shadow in the back.<br>I wanted to use this as a
         wallpaper, but my icons were on the left side, so i wanted to take another shot instead of, yk. just flipping the image.</p></div>
         <br>
 
         <div class="image"><img src="icosymmetry7.jpg">
-        <p>7. hmm a little bit more of the back...</p></div>
+        <p><b>7.</b> hmm a little bit more of the back...</p></div>
         <br>
 
         <div class="image"><img src="icosymmetry8.jpg">
-        <p>8. there we go.</p></div>
+        <p><b>8.</b> there we go.</p></div>
         <br>
         <br>
         <p>If you make the icosahedral ball thing with straight lines instead of circles, you get a
@@ -72,179 +72,179 @@
             <br><br>
 
         <div class="image"><img src="icosymmetry9.jpg">
-        <p>9. the didsdyakis thing with a wireframe modifier and an emission material that makes it glow,
+        <p><b>9.</b> the didsdyakis thing with a wireframe modifier and an emission material that makes it glow,
             another one that's transparent so you can still see the back kinda, but it's darker.
             Also with a smooth sphere in the bottom lit up by the polyhedron. Also also probably the start of my love
             for noisy renders.....</p></div>
             <br>
 
         <div class="image"><img src="icosymmetry10.jpg">
-        <p>10. basically the same thing but the bottom sphere is bigger and the polyhedron
+        <p><b>10.</b> basically the same thing but the bottom sphere is bigger and the polyhedron
         clips through it! Also i think the bottom sphere has a glossy material with a bit of roughness.
         </p></div>
         <br>  
 
         <div class="image"><img src="icosymmetry11.jpg">
-        <p>11. also the same thing but without the wireframe and this time lit by 2
+        <p><b>11.</b> also the same thing but without the wireframe and this time lit by 2
             sun lights in opposite angles.
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry12.jpg">
-        <p>12. same thing as 11 but <i>with</i> a wireframe modifier.
+        <p><b>12.</b> same thing as 11 but <i>with</i> a wireframe modifier.
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry13.jpg">
-        <p>13. now seen from above! Nice symmetry.
+        <p><b>13.</b> now seen from above! Nice symmetry.
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry14.jpg">
-        <p>14. now the camera is inside the ball just below the pillars; exactly where the
+        <p><b>14.</b> now the camera is inside the ball just below the pillars; exactly where the
             light was in the earlier shadow renders! Also with a <b><i>really</i></b> wide angle.
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry15.jpg">
-        <p>15. The shadow of the thick wireframe thing.
+        <p><b>15.</b> The shadow of the thick wireframe thing.
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry16.jpg">
-        <p>16. 14 again but the bottom ball is <i>almost</i> no roughness. i think 0.1. I remember
+        <p><b>16.</b> 14 again but the bottom ball is <i>almost</i> no roughness. i think 0.1. I remember
             trying to look at where the spokes intersect the mirrorball, but they aren't here for some reason.
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry17.jpg">
-        <p>17. Just the wireframe disdyakis thing with an orthographic projection camera. It kinda
+        <p><b>17.</b> Just the wireframe disdyakis thing with an orthographic projection camera. It kinda
             looks like a dodecahedron if you squint hard enough.
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry18.jpg">
-        <p>18. a closeup of 10 spokes coming together!
+        <p><b>18.</b> a closeup of 10 spokes coming together!
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry19.jpg">
-        <p>19. it's number 9 but this time the disdyakis doesn't glow... I honestly dont know how i made this one
+        <p><b>19.</b> it's number 9 but this time the disdyakis doesn't glow... I honestly dont know how i made this one
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry20.jpg">
-        <p>20. The wireframe and unwireframed disdyakises together.
+        <p><b>20.</b> The wireframe and unwireframed disdyakises together.
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry21.jpg">
-        <p>21. 20 but the bit of the wireframe sticking out of the solid one is thinner. Also
+        <p><b>21.</b> 20 but the bit of the wireframe sticking out of the solid one is thinner. Also
             it's more focused on the darker band that's in the shadow of both sun lights.
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry22.jpg">
-        <p>22. This time the wireframe is rotated!
+        <p><b>22.</b> This time the wireframe is rotated!
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry23.jpg">
-        <p>23. Here, i've put 2 planes crossing the wireframe vertically, but since the camera is
+        <p><b>23.</b> Here, i've put 2 planes crossing the wireframe vertically, but since the camera is
             orthographic and looking from above, we don't see the planes, just the shadow!
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry24.jpg">
-        <p>24. Back to the shadowy reflection renders.
+        <p><b>24.</b> Back to the shadowy reflection renders.
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry25.jpg">
-        <p>25. Here's where i start to experiment more with reflections and refractions and stuff.
+        <p><b>25.</b> Here's where i start to experiment more with reflections and refractions and stuff.
             This is a half cylinder with a glass material, so it's basicaly a lens. But the shading isn't smooth
             so you can see the staggered refractions! Also the symmetry ball, oops
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry26.jpg">
-        <p>26. This time i wanted to see the symmetry ball sliced up by the flat faces!
+        <p><b>26.</b> This time i wanted to see the symmetry ball sliced up by the flat faces!
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry27.jpg">
-        <p>27. The same as 25 but looking downwards, i think
+        <p><b>27.</b> The same as 25 but looking downwards, i think
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry28.jpg">
-        <p>28. now looking right; you can see refractions of refractions?
+        <p><b>28.</b> now looking right; you can see refractions of refractions?
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry29.jpg">
-        <p>29. 28 but now properly rounded!
+        <p><b>29.</b> 28 but now properly rounded!
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry30.jpg">
-        <p>30. I think this is just looking directly at the symmetry ball with the light at the center
+        <p><b>30.</b> I think this is just looking directly at the symmetry ball with the light at the center
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry31.jpg">
-        <p>31. Now i've covered the symmetry ball under a glass ball! Looks super cool and... liquidy
+        <p><b>31.</b> Now i've covered the symmetry ball under a glass ball! Looks super cool and... liquidy
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry32.jpg">
-        <p>32. this is what the camera saw when it was just at 0, 0, 0, and i thought it looked kinda cool
+        <p><b>32.</b> this is what the camera saw when it was just at 0, 0, 0, and i thought it looked kinda cool
             so i just rendered it
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry33.jpg">
-        <p>33. i'm pretty sure this is looking through a glass (half?) cyllinder
+        <p><b>33.</b> i'm pretty sure this is looking through a glass (half?) cyllinder
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry34.jpg">
-        <p>34. i think the sphere now has a mixed glass and glossy material so you can see refractions AND 
+        <p><b>34.</b> i think the sphere now has a mixed glass and glossy material so you can see refractions AND 
             reflections on it!
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry35.jpg">
-        <p>35. OK so- it's a concave half cylinder mirror looking at the symmetry ball thing, idk how to
+        <p><b>35.</b> OK so- it's a concave half cylinder mirror looking at the symmetry ball thing, idk how to
             explain it properly
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry36.jpg">
-        <p>36. The same thing but focusing on another place, looks super liquidy again- all just from
+        <p><b>36.</b> The same thing but focusing on another place, looks super liquidy again- all just from
             curved mirror reflections!
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry37.jpg">
-        <p>37. Now looking at the shadow again, but through a REVERSE cyllinder lens, cool and curvy (but a bit
+        <p><b>37.</b> Now looking at the shadow again, but through a REVERSE cyllinder lens, cool and curvy (but a bit
             pointy in a few places)
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry38.jpg">
-        <p>38. the reverse cyllinder lens itself, i was showing some renders to a friend so i just rendered
+        <p><b>38.</b> the reverse cyllinder lens itself, i was showing some renders to a friend so i just rendered
             the lens by itself to show them how i was making stuff
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry39.jpg">
-        <p>39. now looking through another angle
+        <p><b>39.</b> now looking through another angle
         </p></div>
         <br>
 
         <div class="image"><img src="icosymmetry40.jpg">
-        <p>40. i think this is also the reverse cyllinder lens, but you can see the pointy edges so it doesn't look
+        <p><b>40.</b> i think this is also the reverse cyllinder lens, but you can see the pointy edges so it doesn't look
             TOO good...
         </p></div>
         <br>
