added 4 mono fonts

--- a/basement/fonts/monospaced/index.html
+++ b/basement/fonts/monospaced/index.html
@@ -18,7 +18,7 @@
             terminal emulators, as well as just. making something look technological.
         </p><br>
 
-            <details class="subcategory" id="basically_all"><summary><h2>basically all of them (22)</h2></summary>
+            <details class="subcategory" id="basically_all"><summary><h2>basically all of them (26)</h2></summary>
                 <p>Some of these fonts are great for coding and terminal use! Others really aren't, mostly just
                     for display usage and pretty or interesting looking text. Sorted alphabetically.
                 </p>
@@ -324,6 +324,57 @@
                         still looks neat and historical.
                     </p>
                     <img src="profont.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://www.dafont.com/pt/simply-mono-2.font">Simply Mono</a> 
+                    (<a href="https://openfontlicense.org/">OFL</a>)</h3>
+                    <p>by Wojciech Kalinowski</p><br>
+
+                    <p>By the same person that made Consola Mono, this is a very pleasing mono font,
+                        kind of a merge of <a href="https://en.wikipedia.org/wiki/Trebuchet_MS">Trebuchet</a>'s humanist
+                        letter shapes and <a href="https://en.wikipedia.org/wiki/Calibri">Calibri</a>'s semi roundedness, 
+                        very aero aesthetic-y. I like thetilted "e", the assymetric capital "S" and the numerals.
+                    </p>
+                    <img src="simply.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://fonts.google.com/specimen/Sometype+Mono">Sometype Mono</a> 
+                    (<a href="https://openfontlicense.org/">OFL</a>)</h3>
+                    <p>by Ryoichi Tsunekawa</p><br>
+
+                    <p>This font looks quite like Adobe's Source Code Pro actually, but with some differences
+                        here and there, especially the extra-angular "i", it's a pretty good substite! Theres.
+                        not much else to say here tbh, not that it's bad, it just looks kinda like a default font.
+                    </p>
+                    <img src="sometype.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://github.com/sursly/sono">Sono</a> 
+                    (<a href="https://openfontlicense.org/">OFL</a>)</h3>
+                    <p>by <a href="https://tyfromtheinternet.com/">Tyler Finck</a></p><br>
+
+                    <p>This is a very rounded, playful mono font that really reminds me of 
+                        <a href="https://fontworks.co.jp/fontsearch/HummingStd-M/">Humming</a>, the font used in
+                        Animal Crossing dialog boxes. But mono! It has variable weight and <i>proportionality</i>,
+                        so you could use this as a non-mono (proportional) font if you'd like!
+                    </p>
+                    <img src="sono.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://fonts.google.com/specimen/Space+Mono">Space Mono</a> 
+                    (<a href="https://openfontlicense.org/">OFL</a>)</h3>
+                    <p>by <a href="https://www.colophon-foundry.org/">Colophon Foundry</a></p><br>
+
+                    <p>This is a very right angular, geometrical font (that inspired the Space Grotesk
+                        used in the misc pages!) The repeated shapes make it a bit illegible tbh. The choice of
+                        single story "a" as default makes that worse, but you can turn that off with a style set as
+                        you can see. Looks very distinctive and great for display stuffs.
+                    </p>
+                    <img src="space.png">
                 </div>
             
             </div><p>(more fonts soon)</p>
