--- a/corridor.html
+++ b/corridor.html
@@ -47,7 +47,7 @@
             #statuscafe-username{display: none}
             #statuscafe_link{text-decoration-color: chocolate;}
             #statuscafe_link:hover{background-color: chocolate; color: black}
-            #satuscafe a:hover{background-color: var(--color); color: var(--back); text-decoration-color: none}
+            #satuscafe-content a:hover{background-color: var(--color); color: var(--back); text-decoration-color: none}
 
         </style></head>
     <body><main>
