made font size in index adaptaple

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 font-variation-settings: 'wdth' 140;
                 src: url(assets/Inconsolata-VariableFont_wdth\,wght.ttf);}
             body{font-family: 'Inconsolata'; margin: 0; width: 100vw; height: 100vh;
-            display: flex; text-align: right}
+            display: flex; text-align: right; font-size: min(5vh, 5vw)}
             main{margin: auto; width: fit-content}
             h1{margin: 0}
             ::selection{background-color: black; color: white}
