--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             h1{margin: 0}
             ::selection{background-color: black; color: white}
             a{color: black; transition: all .5s cubic-bezier(0,1,0,1);
-                text-decoration: none; border: solid 2px; padding: 4px 8px;}
+                text-decoration: none; border: solid 2px; padding: .125em .25em;}
             a:hover{background-color: black; color: white; text-decoration: black;
                 border-color:black}
         </style></head>
     <body><main>
-        <h1>NOWHERE IN<br>PARTICULAR</h1><div style="margin-top: 24px"><h1><a href="corridor">enter ↘</a></span></h1></div>
+        <h1>NOWHERE IN<br>PARTICULAR</h1><div style="margin-top: 1em"><h1><a href="corridor">enter ↘</a></span></h1></div>
     </main>
     </body>
 </html>
