--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             h1{margin: 0}
             ::selection{background-color: black; color: white}
             a{color: black; transition: all .5s cubic-bezier(0,1,0,1);
-                text-decoration: none; border: solid 2px; padding: .125em .25em;}
+                text-decoration: none; border: solid .075em; padding: .125em .25em;}
             a:hover{background-color: black; color: white; text-decoration: black;
                 border-color:black}
         </style></head>
