--- a/buttons/index.html
+++ b/buttons/index.html
@@ -80,7 +80,8 @@
             <a href="https://jmibo.neocities.org/" class="button" ><img src="jmibo.png" alt="jmibo"></a> 
             <a href="https://kpwu.observer/" class="button"><img id="button_self" src="kpwu_button.png" alt="kpwu"></a></div>
         <h2>other cool places</h2><div class="buttons">
-            <a href="https://zenmaistudio.com/" class="button" style="height:40px"><img src="zenmai.png" alt="zenmai"></a>
+            <a href="https://zenmaistudio.com/" class="button" style="height:40px"><img src="https://zenmaistudio.com/image/minibanner.png" alt="zenmaistudio"></a>
+            <a href="https://decolonizepalestine.com" class="button" style="height:40px"><img src="riversea1.gif" alt="from the river to the sea, palestine will be free"></a>
             <a href="https://worldendling.neocities.org/" class="button"><img width="88" height="31" src="worldendling.gif" alt="worldendling"></a>
             <a href="https://moondvsted.neocities.org/" class="button"><img src="moondvsted.gif" alt="moondvsted"></a>
             <a href="https://telepoet.neocities.org/" class="button"><img src="telepoet8831.gif" alt="TELEPOET"></a> 
@@ -94,6 +95,16 @@
             <script type="text/javascript" src="https://the-blob-system.neocities.org/mante_webring/onionring-variables.js"></script>
             <script type="text/javascript" src="https://the-blob-system.neocities.org/mante_webring/onionring-widget.js"></script>
             </div>
+        <h2>other buttons</h2><div class="buttons">
+            <img src="best_viewed_with_eyes.gif" alt="best viewed with eyes">
+            <img src="firefox4.gif" alt="tested on Firefox">
+            <img src="hand-coded.gif" alt="completely hand-coded!">
+            <img src="ab-trn.png" alt="trans rights Now!">
+            <img src="anarchy1.gif" alt="anarchy Now!">
+            <img src="void.gif" alt="powered by THE VOID">
+            <img src="capybaraNOW.png" alt="capybara Now!">
+            <img src="https://88x31.kate.pet/xeniatrans_now.gif" alt="linux Now!">
+        </div>
         <img src="button.png" alt="cursor clicking on an 88x31 button" style="margin: 0 ; max-width: 100%; width: auto">
     </main>
     </body>
