--- a/website/index.html
+++ b/website/index.html
@@ -1,1 +1,5 @@
-<html><meta http-equiv="Refresh" content="0; url='https://cvni1981.github.io'" /></html>
+<html><head>
+    <title>nowhere in particular</title>
+    <link rel="icon" type="image/x-icon" href="../assets/enter.png">
+    <meta http-equiv="Refresh" content="0; url='https://cvni1981.github.io'" /></head>
+</html>
