finished the mono font drawer!

--- a/basement/fonts/monospaced/index.html
+++ b/basement/fonts/monospaced/index.html
@@ -376,8 +376,62 @@
                     </p>
                     <img src="space.png">
                 </div>
+
+                <div class="font"><h3>
+                    <a href="https://fonts.google.com/specimen/Spline+Sans+Mono">Spline Sans Mono</a> 
+                    (<a href="https://openfontlicense.org/">OFL</a>)</h3>
+                    <p>by Eben Sorkin and Mirko Velimirović</p><br>
+
+                    <p>This is a mono font with some grotesk and some humanist influences together in places,
+                        as well as pointy ink traps in a lot of places which, when used at a smaller size like
+                        with code and UI, it's not visible, but with larger texts it's a bit too distracting
+                        to me. Almost like it's casting a shadow on itself.
+                    </p>
+                    <img src="splinesans.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://gitlab.com/bonjour-monde/fonderie/syne-typeface/-/tree/master">Syne Mono</a> 
+                    (<a href="https://openfontlicense.org/">OFL</a>)</h3>
+                    <p>by <a href="https://www.lucasdescroix.fr/">Lucas Descroix</a> and
+                        <a href="https://armansansd.net/">Arman Mohtadji</a></p><br>
+
+                    <p>This mono is part of a family made by Lucas Descroix and with help from Arman Mohtadji for
+                        a french art center called Synesthésie, the rest of the family is kind of. regular modern fonts,
+                        this mono font was distorted using Arman's DataFace program and it makes it look... idk how
+                        to describe it, its technological but also radioactive feeling. It's a neat look that gives
+                        a neat and unique feeling.
+                    </p>
+                    <img src="syne.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://yoworks.com/telegrama/index.html">Telegrama</a> 
+                    (Specific license packaged with the font)</h3>
+                    <p>by <a href="https://yoworks.com/index.html">Yamaoka Yasuhiro aka YOworks</a></p><br>
+
+                    <p>This font is prob my favorite of the computer-y fonts, made by Yamaoka Yasuhiro in 1992 with
+                        2 versions, a pixelated version (Raw) and a rounded version that i show here (Rendered).
+                        Though the license packaged is a bit vague with web usage, probably contact Yamaoka before
+                        using it for a website. Otherwise, it's freeware! I like the square-y letters.
+                    </p>
+                    <img src="telegrama.png">
+                </div>
+
+            <div class="font"><h3>
+                <a href="https://github.com/kaspernordkvist/uncut_plan8">Uncut Plan8</a> 
+                (<a href="https://openfontlicense.org/">OFL</a>)</h3>
+                <p>by <a href="https://kaspernordkvist.dk/">Kasper Nordkvist</a></p><br>
+
+                <p>This is a mono counterpart to Uncut Sans (a font that i've used for a while on this website),
+                    though not really, they're a bit different but have kind of the same vibe, very Helveticky, kinda
+                    like Fragment Sans. Like it, it's probably best for display use, not coding. This also has
+                    variable italic slant, which is neat!
+                </p>
+                <img src="uncutplan8.png">
+            </div>
             
-            </div><p>(more fonts soon)</p>
+            </div>
     
                 <a class="back" href="#basically_all">↑ top of list</a>
                 </details>
