--- a/basement/fonts/index.html
+++ b/basement/fonts/index.html
@@ -56,7 +56,7 @@
                 and be credited for your work. please read the 
                 <a href="https://openfontlicense.org/open-font-license-official-text/">full license</a> for the actual words).
                 Each font is accompanied by its license if it's not the OFL, with a link. If I gave the wrong
-                license, gave the wrong credit or any other mistake, <a href="mailto:cvni1981@gmail.com">please tell me!!!</a><br>
+                license, gave the wrong credit, translated something wrong or any other mistake, <a href="mailto:cvni1981@gmail.com">please tell me!!!</a><br>
                 Oh, and the drawers here have a bunch of specimen images, so it may take a while to load
                 depending on your bandwidth.<br>
                 Enjoy the fonts! 
